# eng-to-ru-transcriptor

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.ru.md  CONTRIBUTING.md  README.md  README.ru.md  diagnose.py  pyproject.toml  test_manual.py
data/: transliteration_rules.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DSL.md
examples/: basic_usage.py  text.txt
scripts/: convert_dict.py
src/: compiler.py  eng_to_ru.py
src/eng_to_ru_transcriber/: dsl_translator.py  eng_to_ipa_hybrid.py  ipa_to_ru.py  rule_based_ipa.py  transcriber.py
src/eng_to_ru_transcriber/data/: en_dict.pkl  eng_to_ipa_rules.py  transliteration_rules.py
src/eng_to_ru_transcriptor/: __init__.py  compiler.py  eng_to_ipa_hybrid.py  ipa_to_ru.py  transcriptor.py  transducer.py
src/eng_to_ru_transcriptor/data/: __init__.py  phonetic_normalizations.py
tests/: conftest.py  test_compiler.py  test_dsl_translator.py  test_eng_to_ipa_hybrid.py  test_rule_engine.py  test_transcribe.py  test_transducer.py
