[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eng-to-ru-transcriber"
version = "0.2.1"
description = "automatic English-to-Cyrillic text transcriber"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kodovy-pesets" }]
keywords = ["transliteration", "phonetics", "english", "russian", "ipa", "g2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: English",
    "Natural Language :: Russian",
]
dependencies = [
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Isyarname/eng-to-ru-transcriber"
Repository = "https://github.com/Isyarname/eng-to-ru-transcriber"
Changelog = "https://github.com/Isyarname/eng-to-ru-transcriber/blob/main/docs/CHANGELOG.md"
Issues = "https://github.com/Isyarname/eng-to-ru-transcriber/issues"

# src-layout: setuptools ищет пакеты внутри src/
[tool.setuptools.packages.find]
where = ["src"]

# Включаем текстовые ресурсы (словари, DSL-правила, нормализации) в wheel
[tool.setuptools.package-data]
"eng_to_ru_transcriber" = ["data/*.py", "data/*.pkl"]